--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
+            <ul>
+                <li>Blogs</li>
+                <li>Portfolio</li>
+                <li><button class="btn-primary">Hire</button></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
