--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
                 <li><button class="btn-primary">Hire</button></li>
             </ul>
         </nav>
+        <div class="banner">
+           <div>
+            <h3 class="banner-subtitle">Hi, I am</h3>
+            <h2 class="banner-title">Mary Hardy</h2>
+            <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente voluptas molestias voluptate laudantium vel distinctio illum doloremque atque aut quisquam?</p>
+            <button class="btn-primary">Download CV</button>
+            </div>
+            <img src="/images/hardy.png " alt="">
+        </div>
     </header>
     
 </body>
